syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message UtilityPower {
  string id = 1;
  string student_account_id = 2;
  double amount_kwh = 3;
  double price = 4;
  string denom =5;
}
