syntax = "proto3";
package website;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message StidentAccount {
  string id = 1;
  string name = 2;
  string payment_method = 3;
  string xrp_address = 4;
}
